# aoc-rust-template

./: .env.local  .gitignore  Cargo.toml  README-TPL.md  README.md  Taskfile.yml  cargo-generate.toml  pre-script.rhai
src/: lib.rs  main.rs  operations.rs  reader.rs
templates/: day.rs
tests/fixtures/input/: page.html  short_article.html
