[package]
name = "aoc_rust_{{ year }}"
version = "0.1.0"
authors = ["Sam Atkins"]
edition = "2021"
default-run = "aoc_rust_{{ year }}"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
long_running_tests = []

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
glam = "0.24.2"
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
rayon = "1.8.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
rookie = "0.3.3"
rstest = "0.18.2"
scraper = "0.18.1"
tera = "1.19.1"
